coreservices.yaml
apiVersion: v1
kind: Service
metadata:
  name: coreservices
  labels:
    app: coreservices
    service: coreservices
spec:
  ports:
    - port: 8000
      targetPort: 4000
      name: http
      protocol: TCP
    - port: 8090
      targetPort: 9001
      name: web
      protocol: TCP
  selector:
    app: coreservices
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coreservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coreservices
      version: v1
  template:
    metadata:
      labels:
        app: coreservices
        version: v1
    spec:
      serviceAccountName: coreservices
      containers:
      - image: docker.io/sachinpatidar/abilliondreams:core-services
        resources:
          requests:
            cpu: 250m
            memory: 1Gi
          limits:
            cpu: 250m
            memory: 1Gi
        imagePullPolicy: IfNotPresent
        name: coreservices
        ports:
        - containerPort: 4000
          name: http
        - containerPort: 9001
          name: web
      imagePullSecrets:
      - name: registry-credential-secrets
